--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,19 @@ readme = "README.md"
 python = "^3.12"
 django = "^5.0.7"
 psycopg2-binary = "^2.9.9"
+black = "^24.4.2"
+djangorestframework = "^3.15.2"
+pillow = "^10.4.0"
+djangorestframework-simplejwt = "^5.3.1"
+django-filter = "^24.2"
+ipython = "^8.26.0"
+redis = "^5.0.7"
+coverage = "^7.6.0"
+setuptools = "^71.1.0"
+eventlet = "^0.36.1"
+django-celery-beat = "^2.6.0"
+python-dotenv = "^1.0.1"
+requests = "^2.32.3"
 
 
 [build-system]
