--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ eventlet = "^0.36.1"
 django-celery-beat = "^2.6.0"
 python-dotenv = "^1.0.1"
 requests = "^2.32.3"
+drf-yasg = "^1.21.7"
 
 
 [build-system]
