--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ django-celery-beat = "^2.6.0"
 python-dotenv = "^1.0.1"
 requests = "^2.32.3"
 drf-yasg = "^1.21.7"
+django-cors-headers = "^4.4.0"
 
 
 [build-system]
