rework validators.py , add tests.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ python-dotenv = "^1.0.1"
 requests = "^2.32.3"
 drf-yasg = "^1.21.7"
 django-cors-headers = "^4.4.0"
+pytest-cov = "^5.0.0"
 
 
 [build-system]
